updated photo album page

--- a/photos.html
+++ b/photos.html
@@ -1,10 +1,101 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/website.css">
+
+    <title>Addison Hanson</title>
   </head>
   <body>
-    PHOTOS
+
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Addison Hanson</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="music.html">Music</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="photos.html">Photos</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main">
+
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Photos</h1>
+          <p class="lead text-muted">Please scroll through to see some of my favorite pictures I've taken</p>
+        </div>
+      </section>
+
+
+      <div>
+        <div class="container-fluid">
+
+
+          <div class="row">
+            <div class="awhphoto">
+              <img src="img/tahoe.jpg" width="100%" height="100%">
+            </div>
+          </div>
+
+
+        <div class="row">
+          <div class="col-md-4">
+              <div class="awhphoto">
+                <img src="img/bridge.jpg" width="100%" height="100%">
+              </div>
+            </div>
+
+
+            <div class="col-md-8">
+                <div class="awhphoto">
+                  <img src="img/landscape.png" width="100%" height="100%">
+                </div>
+            </div>
+
+
+
+            </div>
+          <div class="row">
+
+            <div class="col-md-6">
+                <div class="awhphoto">
+                  <img src="img/road.jpg" width="100%" height="100%">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="awhphoto">
+                    <img src="img/berlin.png" width="100%" height="100%">
+                  </div>
+                </div>
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </main>
   </body>
 </html>
