--- a/photos.html
+++ b/photos.html
@@ -14,7 +14,6 @@
   <body>
 
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Addison Hanson</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,9 +26,9 @@
           <li class="nav-item">
             <a class="nav-link" href="resume.html">Resume</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="music.html">Music</a>
-          </li>
+          </li> -->
           <li class="nav-item active">
             <a class="nav-link" href="photos.html">Photos</a>
           </li>
@@ -75,7 +74,7 @@
 
 
             </div>
-          <div class="row">
+
 
             <div class="col-md-6">
                 <div class="awhphoto">
@@ -83,14 +82,10 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
-                  <div class="awhphoto">
-                    <img src="img/berlin.png" width="100%" height="100%">
-                  </div>
-                </div>
 
 
-            </div>
+
+
 
           </div>
         </div>
