--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
   <body>
 
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Addison Hanson</a>
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,9 +26,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="resume.html">Resume</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="music.html">Music</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="photos.html">Photos</a>
           </li>
