--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                   <div class="col-md-12 mb-4 white-text text-center">
                     <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Addison Hanson</strong></h1>
                     <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                    <button type="button" class="btn btn-default">Photos</button>
-                    <button type="button" class="btn btn-default">Resume</button>
+                    <button type="button" class="btn btn-default"><a href="photos.html">Photos</a></button>
+                    <button type="button" class="btn btn-default"><a href="resume.html">Resume</a></button>
+                    <button type="button" class="btn btn-default"><a href="https://github.com/addisonhanson/ux_design">UX Design</a></button>
                   </div>
                   <!--Grid column-->
                 </div>
